# research-framework

./: .env.example  .gitignore  00_upload_history.py  02_add_features.py  03_add_targets.py  04_sync_models.py  05_chunks_marker.py  LICENSE  README.md  TASKS.MD  bootstrap_path.py  pyproject.toml  requirements.txt
containers/clickhouse_db/: .dockerignore  .env.example  .gitignore  docker-compose.yml
containers/clickhouse_db/clickhouse/: VERSION
scripts/: __init__.py  project_snapshot.py  restore_snapshot.py  run_context_logger.py  run_happy_path.sh  verify_env_and_smoke.py
src/local_orderbook/: Tasks.md  limitlevel.py  limitleveltree.py  local_ob.py  order.py
src/pipeline/: __init__.py
src/pipeline/features/: __init__.py  declarations.py  default_contexts.py  factory.py  gate.py  graph.py  (+3 more)
src/quant_system/: __init__.py  clickhouse_insert.py  clickhouse_io.py  feature_contracts.py  quant_env.py  secure_horizons.py  time_chunk_processor.py
tests/: README.md  __init__.py  stage_import.py
tests/integration/: test_integration__chunks_marker_smoke.py  test_integration__env_example_parity.py
tests/stubs/: __init__.py  naive_bootstrap.py
tests/unit/: test__local_ob.py  test_unit__chunks_marker.py  test_unit__clickhouse_clients_sqli_safety.py  test_unit__clickhouse_insert.py  test_unit__clickhouse_io.py  test_unit__feature_contracts.py  test_unit__naive_bootstrap.py  test_unit__pipeline_features_sot_gate.py  test_unit__quant_env.py  test_unit__secure_horizons.py  test_unit__stage01_time_bounds.py  test_unit__time_chunk_processor.py  test_unit__upload_history.py
(+7 files in other folders)
